pick changes from v3
Signed-off-by: achmelo <a.chmelo@gmail.com>